# RustyMandelbrot

./: Cargo.toml
src/: interface.rs  main.rs  window.rs
