[package]
name = "rusty_mandelbrot"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Rilazy/RustyMandelbrot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "*"
nalgebra = "*"
image = "*"
winit = "*"
softbuffer = "*"